# cmpt433

public/myApps/: as2  hello_world  motd
work/: CMake notes.txt  as1-capture.txt
work/as1/hello_world/: CMakeLists.txt
work/as1/hello_world/app/src/: main.c
work/as1/hello_world/hal/include/hal/: led.h
work/as1/hello_world/hal/src/: led.c
work/as2/: CMakeLists.txt  as2-gdb.txt  as2.tgz  noworky  noworky.c
work/as2/app/: CMakeLists.txt
work/as2/app/src/: main.c
work/as2/hal/include/hal/: display.h  led.h  pot.h  sampler.h  utilities.h
work/as2/hal/src/: display.c  led.c  pot.c  sampler.c  utilities.c
work/as3/: CMakeLists.txt  how to run.txt
work/as3/app/: CMakeLists.txt
work/as3/app/src/: main.c
work/as3/as3-server/: Makefile  server.js
work/as3/as3-server/lib/: udp_server (copy).js  udp_server.js
work/as3/as3-server/public/: index.html
work/as3/as3-server/public/javascripts/: udp_ui.js
work/as3/as3-server/public/stylesheets/: style.css
work/as3/hal/include/hal/: display.h  periodTimer.h  sampler.h
work/as3/hal/src/: accelerometer.c  audioMixer.c  display.c  joystick.c  led.c  periodTimer.c  pot.c
work/as4/: CMakeLists.txt  Makefile  how to run.txt
work/as4/app/: CMakeLists.txt
work/as4/app/src/: main.c
work/as4/hal/include/hal/: accelerometer.h  buzzer.h  display.h  joystick.h  periodTimer.h
work/as4/hal/src/: accelerometer.c  buzzer.c  display.c  joystick.c  utilities.c
work/as4/pru-as4/: led-shared-struct.h  led-strip-pru.c
work/project/led-matrix-pru/: led-matrix-pru.c
